--- a/main-screen.html
+++ b/main-screen.html
@@ -30,28 +30,30 @@
             </div>
         </div>
         <div class="container">
-            <div class="top clearfix">
-                <div class="foottop footleft">
-                    <a href="#" id="privacy">개인정보처리방침</a>
-                    <a href="#" id="conditions">이용약관</a>
-                </div>
-                <div class="foottop sns">
-                    <div class="frame"><a href="#"></a></div>
-                    <div class="frame"><a href="#"></a></div>
-                    <div class="frame"><a href="#"></a></div>
-                    <div class="frame"><a href="#"></a></div>
-                    <div class="frame"><a href="#"></a></div>
+            <div class = "topper">
+                <div class="top clearfix">
+                    <div class="foottop footleft">
+                        <a href="#" id="privacy">개인정보처리방침</a>
+                        <a href="#" id="conditions">이용약관</a>
+                    </div>
+                    <div class="foottop sns">
+                        <div class="frame"><a href="#"></a></div>
+                        <div class="frame"><a href="#"></a></div>
+                        <div class="frame"><a href="#"></a></div>
+                        <div class="frame"><a href="#"></a></div>
+                        <div class="frame"><a href="#"></a></div>
+                    </div>
                 </div>
             </div>
-            <div class="contact">
-                <div class="blank"></div>
-                <div class="callcenter">
+            <div class="contact clearfix">
+                <div class="blank bottom"></div>
+                <div class="callcenter1 bottom">
                     <div id="gov24call">정부24 콜센터</div>
                     <div id="gov24callnum">1588-2188<br>
-                        02-3703-2500<span id="check">(<span id="02">지역번호 '02'</span>를 확인하세요.)</span></span>
-                        <br><span id="operation">(09:00 ~ 18:00 평일)</span>
+                        02-3703-2500 <span id="check">(<span id="n02">지역번호 '02'</span>를 확인하세요.)</span></span>
+                        <br><span class="operation">(09:00 ~ 18:00 평일)</span>
                     </div>
-                    <div class="innercall">내선번호</div>
+                    <div class="innercall"><span id = "in">내선번호</span></div>
                     <div class="innercall">
                         <span>[1번]</span> 주민등록초본, 건축물대장, 초지대장 문의<br>
                         <span>[2번]</span> 민원신청 및 발급문의<br>
@@ -59,19 +61,19 @@
                         <span>[4번]</span> 회원가입 및 로그인 문의
                     </div>
                 </div>
-                <div class="callcenter">
+                <div class="callcenter2 bottom">
                     <div id="gov24call">정부민원안내콜센터</div>
                     <div>국번없이 110<br>
-                        <span id="operation">(무료, 365일 24시간)</span></div>
+                        <span class="operation">(무료, 365일 24시간)</span></div>
                 </div>
-                <div class="link">
+                <div class="link bottom">
                     <a href="#">찾아오시는길</a>
                     <a href="#">상담예약</a>
                     <a href="#">누리집 개선의견수렴</a>
                     <a href="#">공공서비스 활용(open API)</a>
                 </div>
-            </div>
-            <div class="copy">Copyright &copy; Ministry of the Interior and Safety. All Rights Reserved.
+                <div class="copy">Copyright &copy; Ministry of the Interior and Safety. All Rights Reserved.
+                </div>
             </div>
         </div>
     </footer>
