메인페이지 배너, 로그인박스 완료

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class = "wrapper">
+    <div class = "wrapper clearfix">
         <div class="infobox">
             <div class="adlink">
                 <div class="nextbtn">
@@ -34,8 +34,9 @@
             <form class="login">
                 <button>로그인</button>
             </form>
-            <div class="joinbox">
+            <div class="joinbox clearfix">
                 <a href="#" class = "findmbr">아이디찾기</a>
+                <span class = "bar"></span>
                 <a href="#" class = "findmbr">비밀번호찾기</a>
                 <a href="#" class = "joinmbr">회원가입</a>
             </div>
