main 자주찾는서비스 끝

--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,23 +10,24 @@
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class = "wrapper clearfix">
+    <div class="wrapper clearfix">
         <div class="infobox">
             <div class="adlink">
                 <div class="nextbtn">
                     <div>1/4</div>
-                    <a id = "pre" href="#"></a>
-                    <a id = "play" href="#"></a>
-                    <a id = "next" href="#"></a>
+                    <a id="pre" href="#"></a>
+                    <a id="play" href="#"></a>
+                    <a id="next" href="#"></a>
                 </div>
             </div>
             <div class="searchinfo clearfix">
-                <h3 class = "search">자주찾는 검색</h3>
+                <h3 class="search">자주찾는 검색</h3>
                 <a href="#" class="inforank search"><span>1</span> 가족관계증명서</a>
-                <form action = "#" class="searchbox">
+                <form action="#" class="searchbox">
                     <input type="text" class="searchbox" placeholder="찾으시는 서비스를 입력하세요">
-                    <button class = "searchbox"></button>
+                    <button class="searchbox"></button>
                 </form>
             </div>
         </div>
@@ -35,12 +37,65 @@
                 <button>로그인</button>
             </form>
             <div class="joinbox clearfix">
-                <a href="#" class = "findmbr">아이디찾기</a>
-                <span class = "bar"></span>
-                <a href="#" class = "findmbr">비밀번호찾기</a>
-                <a href="#" class = "joinmbr">회원가입</a>
+                <a href="#" class="findmbr">아이디찾기</a>
+                <span class="bar"></span>
+                <a href="#" class="findmbr">비밀번호찾기</a>
+                <a href="#" class="joinmbr">회원가입</a>
             </div>
         </div>
     </div>
+    <!-- 로그인 박스까지 끝 -->
+    <div class="gray">
+        <div class="wrapper2">
+            <div class="freq clearfix">
+                <h2>자주찾는 서비스(<span class="blue">21</span>)</h2>
+                <h4>서비스 전체보기</h4>
+            </div>
+            <div class="freq-link clearfix">
+                <a href="#" class="freq-arrow freq-arrow1"></a>
+                <a href="#" class="freqlink pink">
+                    <span id = "pink">신청</span>
+                    <p>코로나19<br>생활지원비</p>
+                </a>
+                <a href="#" class="freqlink">
+                    <span>발급</span>
+                    <p>토지(임야)<br>대장</p>
+                </a>
+                <a href="#" class="freqlink">
+                    <span>발급</span>
+                    <p>주민등록등본<br>(초본)</p>
+                </a>
+                <a href="#" class="freqlink">
+                    <span>발급</span>
+                    <p>자동차<br>등록원부</p>
+                </a>
+                <a href="#" class="freqlink">
+                    <span>발급</span>
+                    <p>건축물대장</p>
+                </a>
+                <a href="#" class="freqlink purple">
+                    <span id = "purple">조회</span>
+                    <p>가족관계증명서
+                        <img src="image/main/new-window.png">
+                    </p>
+                </a>
+                <a href="#" class="freqlink">
+                    <span>발급</span>
+                    <p>코로나19<br>예방접종 증명</p>
+                </a>
+                <a href="#" class="freqlink">
+                    <span>발급</span>
+                    <p>격리통지서</p>
+                </a>
+                <a href="#" class="freq-arrow freq-arrow2"></a>
+            </div>
+            <div class = "linkbar clearfix">
+                <span class = "bar bar1"></span>
+                <span class = "bar bar2"></span>
+                <span class = "bar bar3"></span>
+            </div>
+        </div>
+    </div>
+    <!-- -------------------자주찾는 서비스--------------- -->
 </body>
 </html>
