--- a/gov24/정부24개요.html
+++ b/gov24/정부24개요.html
@@ -8,7 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet"></head>
     <link rel="stylesheet" href="../common.css">
 </head>
+
     <style>
+
+        .clearfix::after {
+        content: '';
+        display: block;
+        clear: both;
+        }
         #body{
             width: 100%;
             
