--- a/main.html
+++ b/main.html
@@ -52,9 +52,9 @@
                 <h4>서비스 전체보기</h4>
             </div>
             <div class="freq-link clearfix">
-                <a href="#" class="freq-arrow freq-arrow1"></a>
+                <a href="#" class="arrow arrow1"></a>
                 <a href="#" class="freqlink pink">
-                    <span id = "pink">신청</span>
+                    <span id="pink">신청</span>
                     <p>코로나19<br>생활지원비</p>
                 </a>
                 <a href="#" class="freqlink">
@@ -74,7 +74,7 @@
                     <p>건축물대장</p>
                 </a>
                 <a href="#" class="freqlink purple">
-                    <span id = "purple">조회</span>
+                    <span id="purple">조회</span>
                     <p>가족관계증명서
                         <img src="image/main/new-window.png">
                     </p>
@@ -87,15 +87,106 @@
                     <span>발급</span>
                     <p>격리통지서</p>
                 </a>
-                <a href="#" class="freq-arrow freq-arrow2"></a>
+                <a href="#" class="arrow arrow2"></a>
             </div>
-            <div class = "linkbar clearfix">
-                <span class = "bar bar1"></span>
-                <span class = "bar bar2"></span>
-                <span class = "bar bar3"></span>
+            <div class="linkbar clearfix">
+                <span class="slidebar"></span>
+                <span class="slidebar"></span>
+                <span class="slidebar"></span>
             </div>
         </div>
     </div>
-    <!-- -------------------자주찾는 서비스--------------- -->
+    <!-- -------------------자주찾는 서비스----------------->
+    <div class="wrapper3 clearfix">
+        <div class="leftbox onestop-box">
+            <div class="onestop-titleline clearfix">
+                <h2 class="onestop-title titleline">원스톱 서비스</h2>
+                <a class="blue">국가보훈처 나만의 예우
+                    <img src="image/main/main-ico-newpage-blue.png">
+                </a>
+                <span class="bar"></span>
+                <a class="blue">중소벤처24 기업생애주기서비스
+                    <img src="image/main/main-ico-newpage-blue.png">
+                </a>
+            </div>
+            <div class="onestop-link clearfix">
+                <a href="#" class="arrow arrow1"></a>
+                <a href="#" class="onestoplink">
+                    <div class="frame frame1"></div>
+                    <p>전입신고+</p>
+                </a>
+                <a href="#" class="onestoplink">
+                    <div class="frame frame2"></div>
+                    <p>맘편한 임신</p>
+                </a>
+                <a href="#" class="onestoplink">
+                    <div class="frame frame3"></div>
+                    <p>행복출산</p>
+                </a>
+                <a href="#" class="onestoplink">
+                    <div class="frame frame4"></div>
+                    <p>온종일 돌봄</p>
+                </a>
+                <a href="#" class="onestoplink">
+                    <div class="frame frame5"></div>
+                    <p>꿈청소년</p>
+                </a>
+                <a href="#" class="onestoplink">
+                    <div class="frame frame6"></div>
+                    <p>취업서류</p>
+                </a>
+                <a href="#" class="onestoplink onestoplink-end">
+                    <div class="frame frame7"></div>
+                    <p>노후생활</p>
+                </a>
+                <a href="#" class="arrow arrow2"></a>
+            </div>
+            <div class="linkbar clearfix">
+                <span class="slidebar"></span>
+                <span class="slidebar"></span>
+            </div>
+        </div>
+        <div class="rightbox notice-box">
+            <div class="notice-title clearfix">
+                <h2 class="notice-title">공지사항</h2>
+                <a class="notice-title" href="#">+</a>
+            </div>
+            <div class="notice-list clearfix">
+                <a href="#" class="notice">일부 결제 시스템 작업 안내<span class = "date">2023.03.13.</span></a>
+                <a href="#" class="notice">[경찰청] 운전면허경력증명 민원신청서비... <span class = "date">2023.03.13.</span></a>
+                <a href="#" class="notice">전자지불서비스 대행업체 정기점검 안내 <span class = "date">2023.03.10.</span></a>
+                <a href="#" class="notice">[전라북도 남원시] 무인민원발급기 서비스...<span class = "date">2023.03.10.</span></a>
+                <a href="#" class="notice">[운전경력증명서] 민원신청서비스 지연 안내<span class = "date">2023.03.10.</span></a>
+            </div>
+        </div>
+    </div>
+    <!-------------------- 원스톱서비스 ------------------------>
+    <div class="wrapper3 clearfix">
+        <div class="leftbox box24 clearfix">
+            <div class="loginbox">
+                <h2>보조금24</h2>
+                <div class = "login"><h5>나와 가족이 받을 수 있는<br> 정부혜택을 확인할 수 있어요</h5>
+                <a class = "blue" href="#">로그인하고 확인하기 ></a></div>
+            </div>
+            <div class="linkbox clearfix">
+                <a href="#" class="arrow arrow1"></a>
+                <a class="link link1">이용방법은<br>좌우로 넘겨서<br>확인하세요
+                    <p>상세보기 ></p>
+                    <p class="page">1/6</p>
+                </a>
+                <a href="#" class="arrow arrow2"></a>
+                <a class="link link2">
+                    <img src="image/main/main-subsidy-check.png">
+                    정부가 제공하는<br>전체 혜택 확인</a>
+                <a class="link link3">
+                    <img src="image/main/main-subsidy-search.png">
+                    간편하게<br>찾기</a>
+            </div>
+        </div>
+        <div class="rightbox">
+
+        </div>
+    </div>
 </body>
+
 </html>
