--- a/main.html
+++ b/main.html
@@ -161,7 +161,7 @@
         </div>
     </div>
     <!-------------------- 원스톱서비스 ------------------------>
-    <div class="wrapper3 clearfix">
+    <div class="wrapper4 clearfix">
         <div class="leftbox box24 clearfix">
             <div class="loginbox">
                 <h2>보조금24</h2>
@@ -170,8 +170,8 @@
             </div>
             <div class="linkbox clearfix">
                 <a href="#" class="arrow arrow1"></a>
-                <a class="link link1">이용방법은<br>좌우로 넘겨서<br>확인하세요
-                    <p>상세보기 ></p>
+                <a class="link link1"><p>이용방법은<br>좌우로 넘겨서<br>확인하세요</p>
+                    <p class = "detail">상세보기 ></p>
                     <p class="page">1/6</p>
                 </a>
                 <a href="#" class="arrow arrow2"></a>
@@ -183,10 +183,51 @@
                     간편하게<br>찾기</a>
             </div>
         </div>
-        <div class="rightbox">
-
+        <div class="rightbox mydata">
+            <a id = "mydata" href="#"><img src="image/main/main-ico-mydata.png">마이데이터</a>
+            <a id = "guppi" href="#"><img src="image/main/main-ico-gubbi.png">국민비서구삐</a>
+            <a id = "wallet" href="#"><img src="image/main/main-ico-wallet.png">전자문서지갑</a>
+            <a id = "location" href="#"><img src="image/main/main-ico-location.png">돌봄시설위치</a>
         </div>
     </div>
+        <!----------- 보조금24 영역 끝 --------------->
+        <div class="wrapper5">
+            <div class = "video-box">
+                <div class = "title-line">
+                    <h2 class = "title">새로운 영상</h2>
+                    <a class="video-title" href="#">+</a>
+                </div>
+                <div class = "video">
+                    <iframe src="https://www.youtube.com/embed/MvrmR0k3Bc4" title="통신판매업 신고 정부24 어플 신청 방법" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <p>통신판매업 신고 정부24 어플 신청 방법</p>
+                </div>
+            </div>
+            <div class = "news-box">
+                <div class = "title-line">
+                    <a class = "news-title">정책뉴스</a>
+                    <a class = "news-title">연구보고서</a>
+                    <a class = "news-title">간행물</a>
+                    <a class = "news-title">정책자료</a>
+                    <a class = "news-title">+</a>
+                </div>
+                <div class="newscontents">
+                    <a class = "content" href="#">현장 중심의 수소 상용차 보급 지원단 출범<span>2023.03.14</span></a>
+                    <a class = "content" href="#">전국 유통 농산물의 안전성 확보에 노력<span>2023.03.14</span></a>
+                    <a class = "content" href="#">지역사랑상품권 유효기간 및 낙전, 법령상 취지에 맞게 관리<span>2023.03.14</span></a>
+                    <a class = "content" href="#">부처 간 협조 하에 ‘범정부 국가안전시스템 개편 종합대책’<span>2023.03.14</span></a>
+                </div>
+            </div>
+            <div class = "banner-box">  
+                <div class="nextbtn">
+                     <div>1/3</div>
+                    <a id="pre" href="#"></a>
+                    <a id="play" href="#"></a>
+                    <a id="next" href="#"></a>
+                </div>
+                
+            </div>
+        </div>
+   
 </body>
 
 </html>
