메인페이지 완성

--- a/main.html
+++ b/main.html
@@ -198,8 +198,8 @@
                     <a class="video-title" href="#">+</a>
                 </div>
                 <div class = "video">
-                    <iframe src="https://www.youtube.com/embed/MvrmR0k3Bc4" title="통신판매업 신고 정부24 어플 신청 방법" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <p>통신판매업 신고 정부24 어플 신청 방법</p>
+                    <a href = "https://youtu.be/C2yMK-1jq0I"><img src = "image/main/img_new_v6.gif">
+                    <p>통신판매업 신고 정부24 어플 신청 방법</p></a>
                 </div>
             </div>
             <div class = "news-box">
@@ -219,7 +219,7 @@
             </div>
             <div class = "banner-box">  
                 <div class="nextbtn">
-                     <div>1/3</div>
+                    <div>1/3</div>
                     <a id="pre" href="#"></a>
                     <a id="play" href="#"></a>
                     <a id="next" href="#"></a>
