--- a/gov24/header.html
+++ b/gov24/header.html
@@ -116,6 +116,11 @@
         display: block;
         
     }
+    #body #m-menu #b-head #r-m-menu{
+        border: 1px solid red;
+        width: 20px;
+        height: 20px;
+    }
     
 
 
