header 그림자부분 완성 및 메인 적용

--- a/main.html
+++ b/main.html
@@ -71,6 +71,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="droparea-back"></div>
                     </li>
                     <li><a class="menu" href="#">보조금24</a>
                         <div class="droparea">
@@ -84,6 +85,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="droparea-back"></div>
                     </li>
                     <li><a class="menu" href="#">정책정보</a>
                         <div class="droparea">
@@ -98,7 +100,9 @@
                                     <a href="#" class="drop-content">공모전</a>
                                 </div>
                             </div>
-                        </div></li>
+                        </div>
+                        <div class="droparea-back"></div>
+                    </li>
                     <li><a class="menu" href="#">고객센터</a>
                         <div class="droparea">
                             <div id = "call" class="bgimg"><p>고객센터</p></div>
@@ -112,7 +116,9 @@
                                     <a href="#" class="drop-content">상담예약</a>
                                 </div>
                             </div>
-                        </div></li>
+                        </div>
+                        <div class="droparea-back"></div>
+                    </li>
                     <li><a class="menu" href="#">MyGOV</a>
                         <div class="droparea">
                             <div id = "my" class="bgimg"><p>MyGOV</p></div>
@@ -126,7 +132,9 @@
                                     <a href="#" class="drop-content">나의 인증관리</a>
                                 </div>
                             </div>
-                        </div></li>
+                        </div>
+                        <div class="droparea-back"></div>
+                    </li>
                 </ul>
                 <a class="firstvisit">
                     <img src="image/header/ico-guide.png">
