--- a/header24.html
+++ b/header24.html
@@ -69,6 +69,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="droparea-back"></div>
                     </li>
                     <li><a class="menu" href="#">보조금24</a>
                         <div class="droparea">
