볼일없을거야

--- a/complete.html
+++ b/complete.html
@@ -8,17 +8,17 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="../common.css">
-<link rel="stylesheet" href="../gov24/GOV24.css">
-<link rel="stylesheet" href="../header24.css">
-<link rel="stylesheet" href="../footer.css">
-<link rel="stylesheet" href="../GOV242.css">
-<link rel="stylesheet" href="../GOV243.css">
+<link rel="stylesheet" href="common.css">
+<link rel="stylesheet" href="1번째.css">
+<link rel="stylesheet" href="header24.css">
+<link rel="stylesheet" href="footer.css">
+<link rel="stylesheet" href="2번째.css">
+<link rel="stylesheet" href="3번째.css">
 
 
 </head>
 
-<body>
+<body >
 
 
 
@@ -27,7 +27,7 @@
 
 
 
-    <section id="body">
+    <section id="body" class="clearfix">
 
         <ul id="menu1">
             <ul id="r-title">
@@ -115,8 +115,8 @@
 
     <section>
         <div>
-            <div id="title">
-                <h2 id="h2">정부24의 주요 메뉴</h2>
+            <div id="title" >
+                <div><h2 id="h2">정부24의 주요 메뉴</h2></div>
             </div>
             <div id=middle>
                 <div class="middle1 clearfix">
@@ -240,7 +240,7 @@
         <section1>
             <ul id="header11">
                 <li>
-                    <h1 class="h1">정부24 홍보동영상</h1>
+                    <div><h1 class="h1">정부24 홍보동영상</h1></div>
                 </li>
             </ul>
             <div id="page">
@@ -282,7 +282,7 @@
                 </div>
                 <div class="box5">
                     <div class="img3"><img src="../img/8.png"></div>
-                    <h2>우리사회의 보조개, 보조금2 4</h2>
+                    <h2>우리사회의 보조개, 보조금24</h2>
                     <p class="p">등록일 : 2021.03.29
                     </p>
                 </div>
